--- a/index.html
+++ b/index.html
@@ -6,48 +6,16 @@
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<link rel="stylesheet" href="shower/themes/ribbon/styles/screen.css">
-	<!--
-		To apply styles to the certain slides
-		set slide ID to get needed elements
-		-->
-	<style>
-		#Cover h2 {
-			margin:30px 0 0;
-			color:#FFF;
-			text-align:center;
-			font-size:70px;
-			}
-		#Cover p {
-			margin:10px 0 0;
-			text-align:center;
-			color:#FFF;
-			font-style:italic;
-			font-size:20px;
-			}
-			#Cover p a {
-				color:#FFF;
-				}
-		#Picture h2 {
-			color:#FFF;
-			}
-		#SeeMore h2 {
-			font-size:100px
-			}
-		#SeeMore img {
-			width:0.72em;
-			height:0.72em;
-			}
-	</style>
 </head>
 <body class="list">
 	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
+		<h1>REST (Representational State Transfer)</h1>
+		<p>Equipe: Fabrício, Graziele, Lucas</p>
 	</header>
 	<section class="slide cover" id="Cover"><div>
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-		<img src="pictures/cover.jpg" alt="">
+		<h2>REST</h2>
+		<p>Equipe: Fabrício, Graziele, Lucas</a></p>
+		<img src="pictures/rest.jpg" alt="" width="1000px">
 		<!-- photo by John Carey, fiftyfootshadows.net -->
 	</div></section>
 	<section class="slide"><div>
