--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Shower Presentation Engine</title>
+	<title>REST</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,19 +15,13 @@
 	<section class="slide cover" id="Cover"><div>
 		<h2>REST</h2>
 		<p>Equipe: Fabrício, Graziele, Lucas</a></p>
-		<img src="pictures/rest.jpg" alt="" width="1000px">
-		<!-- photo by John Carey, fiftyfootshadows.net -->
+		<img src="pictures/rest.jpg" alt="" width="1024px">
 	</div></section>
 	<section class="slide"><div>
-		<h2>Shower Key Features</h2>
-		<ol>
-			<li>Built on HTML, CSS and vanilla JavaScript</li>
-			<li>All modern browsers are supported</li>
-			<li>Slide themes are separated from engine</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+		<h2>O que é REST?</h2>
+		<p>REST é uma técnica de engenharia de software para sistemas distribuídos.</p>
+		<p>Surgiu em 2000, em uma tese de doutorado sobre a web, escrita pelo norte-americano <strong>Roy Fielding *</strong></p>
+		<p class="note">* um dos principais autores da especificação HTTP</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Plain Text on Your Slides</h2>
