--- a/index.html
+++ b/index.html
@@ -24,32 +24,33 @@
 		<p class="note">* um dos principais autores da especificação HTTP</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Plain Text on Your Slides</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
+		<h2>Principais características</h2>
+		<ul>
+			<li>Utiliza padrões já existentes</li>
+			<li class="next">Stateless</li>
+			<li class="next">Orientado a recurso</li>
+			<li class="next">Interface uniforme para acesso aos recursos (URI)</li>
+			<li class="next">Representações independentes</li>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<h2>All Kind of Lists</h2>
-		<ol>
-			<li>Simple lists are marked with bullets</li>
-			<li>Ordered lists begin with a number</li>
-			<li>You can even nest lists one inside another
+		<h2>REST - Stateless</h2>
+		<p>Toda requisição HTTP é completamente isolada das outras</p>
+		<p class="next">Cada requisição precisa incluir todas as informações para uma resposta do servidor</p>
+	</div></section>
+	<section class="slide"><div>
+		<h2>REST - Recursos</h2>
+		<p>Seria tudo que é importante ao ponto de ser exposto na web</p>
+		<ul>
+			<li>
+				Exemplos:
 				<ul>
-					<li>Or mix their types</li>
-					<li>But do not go too far</li>
-					<li>Otherwise audience will be bored</li>
+					<li class="next">Tweets no Twitter</li>
+					<li class="next">Post no Facebook</li>
+					<li class="next">Fotos no Instagram</li>
 				</ul>
 			</li>
-			<li>Look, seven rows exactly!</li>
-		</ol>
-	</div></section>
-	<section class="slide"><div>
-		<h2>Serious Citations</h2>
-		<figure>
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-			</blockquote>
-			<figcaption>Marcus Tullius Cicero</figcaption>
-		</figure>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Code Samples</h2>
@@ -84,6 +85,8 @@
 	<section class="slide shout" id="SeeMore"><div>
 		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower/">See more on GitHub</a></h2>
 	</div></section>
+
+	<section class="slide"></section>
 	<!--
 		To hide progress bar from entire presentation
 		just remove “progress” element.
