--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</div></section>
 	<section class="slide"><div>
 		<h2>REST - Recursos</h2>
-		<p>Seria tudo que é importante ao ponto de ser exposto na web</p>
+		<p>Tudo que é importante ao ponto de ser exposto na web</p>
 		<ul>
 			<li>
 				Exemplos:
@@ -51,42 +51,78 @@
 				</ul>
 			</li>
 		</ul>
+		<p class="next">Todo recurso possui no mínimo uma URI</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Code Samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code>&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <mark class="comment">&lt;!--Comment--&gt;</mark></code>
-			<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
-	</div></section>
-	<section class="slide cover" id="Picture"><div>
-		<h2>Pictures</h2>
-		<img src="pictures/picture.jpg" alt="">
-		<!-- photo by John Carey, fiftyfootshadows.net -->
-	</div></section>
-	<section class="slide shout"><div>
-		<h2>You can even shout this way</h2>
+		<h2>REST - Interface uniforme</h2>
+		<p>Utiliza os métodos do protocolo HTTP para manipulação de recursos (Verbos)</p>
+		<ul>
+			<li class="next">GET</li>
+			<li class="next">POST</li>
+			<li class="next">PUT</li>
+			<li class="next">DELETE</li>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Inner Navigation</h2>
-		<ol>
-			<li>Lets you reveal list items one by one</li>
-			<li class="next">To keep some key points</li>
-			<li class="next">In secret from audience</li>
-			<li class="next">But it will work only once</li>
-			<li class="next">Nobody wants to see the same joke twice</li>
-		</ol>
+		<h2>REST - GET</h2>
+		<p>Utilizado para obter uma representação do recurso</p>
+		<ul>
+			<li class="next">
+				Exemplo:
+				<ul>
+					<li class="next">
+						<code>www.bookstore.com/books/<strong class="next" style="color: red;"><i>history</i></strong></code>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</div></section>
-	<section class="slide shout" id="SeeMore"><div>
-		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower/">See more on GitHub</a></h2>
+	<section class="slide"><div>
+		<h2>REST - POST</h2>
+		<p>Utilizado para criar um novo recurso</p>
+		<ul>
+			<li class="next">
+				Exemplo:
+				<ul>
+					<li class="next">
+						<code>www.bookstore.com/books/<strong class="next" style="color: red;"><i>new</i></strong></code>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>REST - PUT</h2>
+		<p>Utilizado para modificar um recurso existente</p>
+		<ul>
+			<li class="next">
+				Exemplo:
+				<ul>
+					<li class="next">
+						<code>www.bookstore.com/books/<strong class="next" style="color: red;"><i>edit{id}</i></strong></code>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>REST - DELETE</h2>
+		<p>Utilizado para deletar um recurso</p>
+		<ul>
+			<li class="next">
+				Exemplo:
+				<ul>
+					<li class="next">
+						<code>www.bookstore.com/books/<strong class="next" style="color: red;"><i>delete{id}</i></strong></code>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</div></section>
 
-	<section class="slide"></section>
+	<section class="slide"><div>
+		
+	</div></section>
 	<!--
 		To hide progress bar from entire presentation
 		just remove “progress” element.
