--- a/index.html
+++ b/index.html
@@ -121,7 +121,25 @@
 	</div></section>
 
 	<section class="slide"><div>
-		
+		<h2>REST - Variações</h2>
+		<ul>
+			<li class="next">
+				RESTful
+				<ul>
+					<li class="next">Utilização dos quatro verbos (GET, POST, PUT, DELETE)</li>
+				</ul>
+			</li>
+			<li class="next">
+				REST-RPC
+				<ul>
+					<li class="next">Utilização do método GET para toda API</li>
+				</ul>
+			</li>
+		</ul>
+	</div></section>
+
+	<section class="slide shout"><div>
+		<h2>Dúvidas?</h2>
 	</div></section>
 	<!--
 		To hide progress bar from entire presentation
