--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 		<img src="pictures/rest.jpg" alt="" width="1024px">
 	</div></section>
 	<section class="slide"><div>
+		<h2>Introdução</h2>
+		<ul>
+			<li>Em 1990 a web começa a ganhar força</li>
+			<li class="next">Oportunidade de negócios</li>
+			<li class="next">Surge a necessidade de realizar transações pela internet</li>
+			<li class="next">Em 1998 surge o XML-RPC</li>
+			<li class="next">A partir do XML-RPC surge o SOAP</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
 		<h2>O que é REST?</h2>
 		<p>REST é uma técnica de engenharia de software para sistemas distribuídos.</p>
 		<p>Surgiu em 2000, em uma tese de doutorado sobre a web, escrita pelo norte-americano <strong>Roy Fielding *</strong></p>
