--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 		</ul>
 	</div></section>
 	<section class="slide"><div>
+		<h2>SOAP (Simple Object Access Protocol)</h2>
+		<ul>
+			<li>Padrão baseado em ações</li>
+			<li class="next">Abstração para chamadas de métedos</li>
+			<li class="next">Em geral possui um único endereço de acesso e várias ações</li>
+			<li class="next">Essas ações podem ocorrer sobre vários protocolos, tais como SMTP, HTTP</li>
+			<li class="next">Quando utiliza o HTTP, faz uso apenas do verbo <strong>POST</strong></li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
 		<h2>O que é REST?</h2>
 		<p>REST é uma técnica de engenharia de software para sistemas distribuídos.</p>
 		<p>Surgiu em 2000, em uma tese de doutorado sobre a web, escrita pelo norte-americano <strong>Roy Fielding *</strong></p>
