--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 		</ul>
 	</div></section>
 	<section class="slide"><div>
+		<h2></h2>
+	</div></section>
+	<section class="slide"><div>
 		<h2>O que é REST?</h2>
 		<p>REST é uma técnica de engenharia de software para sistemas distribuídos.</p>
 		<p>Surgiu em 2000, em uma tese de doutorado sobre a web, escrita pelo norte-americano <strong>Roy Fielding *</strong></p>
@@ -161,10 +164,6 @@
 	<section class="slide shout"><div>
 		<h2>Dúvidas?</h2>
 	</div></section>
-	<!--
-		To hide progress bar from entire presentation
-		just remove “progress” element.
-		-->
 	<div class="progress"><div></div></div>
 	<script src="shower/shower.min.js"></script>
 	<!-- Copyright © 2013 Yours Truly, Famous Inc. -->
