--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<h2>SOAP (Simple Object Access Protocol)</h2>
 		<ul>
 			<li>Padrão baseado em ações</li>
-			<li class="next">Abstração para chamadas de métedos</li>
+			<li class="next">Abstração para chamadas de métodos</li>
 			<li class="next">Em geral possui um único endereço de acesso e várias ações</li>
 			<li class="next">Essas ações podem ocorrer sobre vários protocolos, tais como SMTP, HTTP</li>
 			<li class="next">Quando utiliza o HTTP, faz uso apenas do verbo <strong>POST</strong></li>
